# polaris_ranger_sim

./: README.md  README.me
polaris_control/: CMakeLists.txt  package.xml
polaris_control/config/: polaris_camera.rviz  waypoints.txt  waypoints_export.txt
polaris_control/include/: polaris_control_plugin.h  polaris_waypoint_follower.h
polaris_control/launch/: empty_world.launch  keyboard_teleop.launch  outdoor_world.launch  waypoint_follower.launch
polaris_control/src/: polaris_control_plugin.cpp  polaris_keyboard_teleop.py  polaris_waypoint_follower.cpp
polaris_description/luigi_circuit/: luigi_circuit.world  model-1_4.sdf
polaris_description/luigi_circuit/meshes/: model.dae
polaris_description/models/: model-1_4_camera.sdf
polaris_description/moon_view/: moon_view.world
polaris_description/moon_view/meshes/: model.dae
polaris_description/world/: moon_view.world
polaris_description/worlds/: outdoor_sandbox.world
